# xno-connect

./: .env.example  Cargo.toml  LICENSE  README.md
examples/: rpc_and_wallet.rs
src/: error.rs  lib.rs
src/blocks/: builder.rs  hash.rs  mod.rs  sign.rs  state.rs
src/keys/: derivation.rs  keypair.rs  mod.rs  seed.rs
src/rpc/: client.rs  mod.rs  requests.rs  responses.rs
src/types/: account.rs  amount.rs  block.rs  mod.rs  signature.rs  work.rs
src/wallet/: account.rs  mod.rs  wallet.rs
src/websocket/: client.rs  messages.rs  mod.rs  subscription.rs
src/work/: cpu.rs  mod.rs  validate.rs
tests/: change_block_integration.rs  real_transfer_integration.rs  wasm_rpc_test.rs  wasm_websocket_test.rs  websocket_integration.rs
